--- a/package.json
+++ b/package.json
@@ -1,34 +1,49 @@
 {
-  "name": "@yfs/react",
+  "name": "solid-yfs",
   "version": "0.1.0",
-  "description": "Synchronize text files between the browser and the file system",
+  "description": "Synchronize text files between the browser and the file system for solid-js",
   "license": "MIT",
-  "repository": "git@github.com:motifland/yfs.git",
+  "repository": "git@github.com:krapjost/solid-yfs.git",
   "author": {
-    "name": "Michael Fester",
-    "email": "michael.fester@gmail.com",
-    "url": "https://motif.land"
+    "name": "krapjost",
+    "email": "krapjost@gmail.com",
+    "url": "https://krapjost.github.io"
   },
   "sideEffects": false,
   "type": "module",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "rimraf ./dist && tsc",
-    "prepublish": "npm run tsc",
-    "clean": "rimraf ./dist"
+    "build": "rollup -c",
+    "prepublishOnly": "npm run build",
+    "release": "release-it"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "dependencies": {
     "diff": "^5.0.0",
     "idb-keyval": "^6.1.0",
-    "react": "18.1.0",
+    "solid-js": "^1.6.10",
+    "yjs": "^13.5.35"
+  },
+  "peerDependencies": {
+    "diff": "^5.0.0",
+    "idb-keyval": "^6.1.0",
+    "solid-js": "^1.6.10",
     "yjs": "^13.5.35"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/diff": "^5.0.2",
     "@types/node": "^17.0.30",
-    "@types/react": "^18.0.8",
+    "release-it": "^15.6.0",
+    "rollup": "^3.12.1",
+    "tslib": "^2.5.0",
     "typescript": "^4.6.4"
   }
 }
